WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
39982
Fix default action for EndTagOpenState
https://bugs.webkit.org/show_bug.cgi?id=39982
Summary
Fix default action for EndTagOpenState
Adam Barth
Reported
2010-05-31 22:41:52 PDT
Fix default action for EndTagOpenState
Attachments
Patch
(3.76 KB, patch)
2010-05-31 22:44 PDT
,
Adam Barth
no flags
Details
Formatted Diff
Diff
Patch for landing
(5.96 KB, patch)
2010-05-31 23:38 PDT
,
Adam Barth
no flags
Details
Formatted Diff
Diff
landzor
(4.58 KB, patch)
2010-05-31 23:45 PDT
,
Adam Barth
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Adam Barth
Comment 1
2010-05-31 22:44:10 PDT
Created
attachment 57518
[details]
Patch
Eric Seidel (no email)
Comment 2
2010-05-31 22:50:40 PDT
Comment on
attachment 57518
[details]
Patch LGTM.
WebKit Commit Bot
Comment 3
2010-05-31 23:25:54 PDT
Comment on
attachment 57518
[details]
Patch Rejecting patch 57518 from commit-queue. Failed to run "['WebKitTools/Scripts/run-webkit-tests', '--no-launch-safari', '--exit-after-n-failures=1', '--ignore-tests', 'compositing', '--quiet']" exit_code: 1 Last 500 characters of output: ld-dumprendertree Compiling Java tests make: Nothing to be done for `default'. Running tests from /Users/eseidel/Projects/CommitQueue/LayoutTests Skipped list contained 'compositing/iframes/composited-iframe.html', but no file of that name could be found Testing 19018 test cases. html5lib/runner.html -> failed Exiting early after 1 failures. 15319 tests run. 225.14s total testing time 15318 test cases (99%) succeeded 1 test case (<1%) had incorrect layout 14 test cases (<1%) had stderr output Full output:
http://webkit-commit-queue.appspot.com/results/2755027
Adam Barth
Comment 4
2010-05-31 23:38:03 PDT
Created
attachment 57520
[details]
Patch for landing
Adam Barth
Comment 5
2010-05-31 23:45:33 PDT
Created
attachment 57521
[details]
landzor
WebKit Commit Bot
Comment 6
2010-06-01 00:06:45 PDT
Comment on
attachment 57521
[details]
landzor Clearing flags on attachment: 57521 Committed
r60465
: <
http://trac.webkit.org/changeset/60465
>
WebKit Commit Bot
Comment 7
2010-06-01 00:06:52 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug